--- a/Ex1/app/src/main/res/values-en-rCA/strings.xml
+++ b/Ex1/app/src/main/res/values-en-rCA/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Exam 1. Winter 2023</string>
     <string name="indeter">Indeterminate</string>
